# JPEG_deinterlacer

./: Build.sh  CMakeLists.txt  main.cpp
Core/: BaseImage.h  BaseImageProcessingCommand.h  BaseImageProcessingCommandCollection.cpp  BaseImageProcessingCommandCollection.h  Constants.h  DeinterlacerJPEGProcessingCommand.cpp  DeinterlacerJPEGProcessingCommand.h  File.cpp  File.h  ImageProcessingCommandCollectionsHolder.cpp  ImageProcessingCommandCollectionsHolder.h  ImageProcessor.cpp  ImageProcessor.h  JPEGImage.cpp  JPEGImage.h  JPEGImageProcessingCommandCollection.cpp  JPEGImageProcessingCommandCollection.h
